SubBt/force-app/main/default/objects/RFI_Settings__c/RFI_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RFI Settings</label>
</CustomObject>