SubBt/force-app/main/default/objects/RFI_Settings__c/fields/New_RFI_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>New_RFI_Notification_Template__c</fullName>
    <label>New RFI Notification Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>