SubBt/force-app/main/default/objects/RFI_Settings__c/fields/Recipient_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Notification_Template__c</fullName>
    <label>Recipient Notification Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>