SubBt/force-app/main/default/objects/RFI_Settings__c/fields/RFI_Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>RFI_Default_Owner__c</fullName>
    <label>RFI Default Owner</label>
    <length>80</length>
    <type>Text</type>
</CustomField>