SubBt/force-app/main/default/objects/RFI_Settings__c/fields/Using_Communities__c.field-meta.xml
<CustomField>
    <fullName>Using_Communities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Using Communities</label>
    <type>Checkbox</type>
</CustomField>