SubBt/force-app/main/default/objects/RFI_Settings__c/fields/Using_Email__c.field-meta.xml
<CustomField>
    <fullName>Using_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using Email</label>
    <type>Checkbox</type>
</CustomField>