SubBt/force-app/main/default/objects/RFI_Settings__c/fields/Vendor_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Notification_Template__c</fullName>
    <label>Vendor Notification Template</label>
    <length>50</length>
    <type>Text</type>
</CustomField>